--- a/loans-qa.yml
+++ b/loans-qa.yml
@@ -4,7 +4,7 @@ build:
 loans:
   message: "Welcome to EazyBank loans related QA APIs "
   contactDetails:
-    name: "Mario Leo - QA Lead"
+    name: "Messi - QA Lead"
     email: "cyrano@eazybank.com"
   onCallSupport:
     - (785) 545-8416
