--- a/cards-prod.yml
+++ b/cards-prod.yml
@@ -2,7 +2,7 @@ build:
   version: "1.0"
 
 cards:
-  message: "Welcome to EazyBank cards related Prod APIs "
+  message: "Welcome to EazyBank cards related production APIs "
   contactDetails:
     name: "Mr.Ali - Product Owner"
     email: "sandra@eazybank.com"
