--- a/accounts-prod.yml
+++ b/accounts-prod.yml
@@ -4,7 +4,7 @@ build:
 accounts:
   message: "Welcome to EazyBank accounts related production APIs "
   contactDetails:
-    name: "Owner@Owner - Product Owner"
+    name: "Md.Hossain Ali - Product Owner"
     email: "aishwarya@eazybank.com"
   onCallSupport:
     - (453) 392-4829
