--- a/accounts-prod.yml
+++ b/accounts-prod.yml
@@ -2,7 +2,7 @@ build:
   version: "1.0"
 
 accounts:
-  message: "Welcome to EazyBank accounts related production APIs "
+  message: "Welcome to accounts microservice related production APIs "
   contactDetails:
     name: "Md.Hossain Ali - Product Owner"
     email: "aishwarya@eazybank.com"
