--- a/accounts-prod.yml
+++ b/accounts-prod.yml
@@ -4,7 +4,7 @@ build:
 accounts:
   message: "Welcome to accounts microservice related production APIs "
   contactDetails:
-    name: "Md.Hossain Ali - Product Owner"
+    name: "Md. Ali Hossain- Product Owner"
     email: "ali@info.com"
   onCallSupport:
     - (453) 392-4829
