--- a/accounts.yml
+++ b/accounts.yml
@@ -2,10 +2,10 @@ build:
   version: "3.0"
 
 accounts:
-  message: "Welcome to EazyBank accounts related local APIs "
+  message: "Welcome to  accounts related local APIs "
   contactDetails:
     name: "Ashraful - Developer"
-    email: "john@eazybank.com"
+    email: "sohag@info.com"
   onCallSupport:
     - (555) 555-1234
     - (555) 523-1345
