--- a/ca-publicservice-dv-01/accounts-prod.yml
+++ b/ca-publicservice-dv-01/accounts-prod.yml
@@ -5,7 +5,7 @@ accounts:
   message: "Welcome to accounts microservice related production APIs "
   contactDetails:
     name: "Md. Ali Hossain- Product Owner"
-    email: "hossainAli@info.com"
+    email: "ashrafulIslam@info.com"
   onCallSupport:
     - (453) 01724575158
     - (236) 090078401
