--- a/config/ca-publicservice-dv-02/accounts.yml
+++ b/config/ca-publicservice-dv-02/accounts.yml
@@ -5,7 +5,7 @@ accounts:
   message: "Welcome to EazyBank accounts related local APIs "
   contactDetails:
     name: "Ashraful - Developer"
-    email: "who_are_you?.com"
+    email: "john@eazybank.com"
   onCallSupport:
-    - (555) 090078401
+    - (555) 555-1234
     - (555) 523-1345
