--- a/ca-publicservice-dv-01/accounts-dv-01.yml
+++ b/ca-publicservice-dv-01/accounts-dv-01.yml
@@ -2,7 +2,7 @@ build:
   version: "3.0"
 
 accounts:
-  message: "Welcome to EazyBank accounts related local APIs "
+  message: "Welcome to EazyBank accounts related DEV APIs "
   contactDetails:
     name: "Ashraful - Developer"
     email: "john234@eazybank.com"
