--- a/ca-publicservice-dv-02/accounts-dv-02.yml
+++ b/ca-publicservice-dv-02/accounts-dv-02.yml
@@ -2,7 +2,7 @@ build:
   version: "1.0"
 
 accounts:
-  message: "Welcome to EazyBank accounts related local APIs "
+  message: "Welcome to EazyBank accounts related dv-02 APIs "
   contactDetails:
     name: "Ashraful - Developer"
     email: "john@eazybank.com"
