--- a/ca-publicservice-dv-02/accounts-dv-02.yml
+++ b/ca-publicservice-dv-02/accounts-dv-02.yml
@@ -4,7 +4,7 @@ build:
 accounts:
   message: "Welcome to EazyBank accounts related dv-02 APIs "
   contactDetails:
-    name: "Ashraful Islam- Developer"
+    name: "Ashraful Islam Shohag- Developer"
     email: "shohag@info.com"
   onCallSupport:
     - (555) 555-1234
