--- a/ca-publicservice-dv-01/accounts-dv-01.yml
+++ b/ca-publicservice-dv-01/accounts-dv-01.yml
@@ -1,5 +1,5 @@
 accounts:
-  message: "Welcome to EazyBank accounts related DEV APIs "
+  message: "Welcome to EazyBank accounts related dv-01 APIs "
   contactDetails:
     name: "Ashraful - Developer"
     email: "john234@eazybank.com"
